[package]
name = "rust_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
#members = ["sorting"]

# cargo run --bin bubble_sort
# cargo test --bin bubble_sort
[[bin]]
name = "bubble_sort"
path = "sorting/bubble_sort.rs"

[[bin]]
name = "bucket_sort"
path = "sorting/bucket_sort.rs"

[[bin]]
name = "cocktail_shaker_sort"
path = "sorting/cocktail_shaker_sort.rs"

[[bin]]
name = "insertion_sort"
path = "sorting/insertion_sort.rs"

[[bin]]
name = "comp_sort"
path = "sorting/comb_sort.rs"

[dependencies]