[package]
name = "rust_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
#members = ["sorting"]

# cargo run --bin bubble_sort
# cargo test --bin bubble_sort
[[bin]]
name = "bubble_sort"
path = "src/sorting/bubble_sort.rs"

[[bin]]
name = "bucket_sort"
path = "src/sorting/bucket_sort.rs"

[[bin]]
name = "cocktail_shaker_sort"
path = "src/sorting/cocktail_shaker_sort.rs"

[[bin]]
name = "insertion_sort"
path = "src/sorting/insertion_sort.rs"

[[bin]]
name = "comp_sort"
path = "src/sorting/comb_sort.rs"

[[bin]]
name = "counting_sort"
path = "src/sorting/counting_sort.rs"

[[bin]]
name = "gnome_sort"
path = "src/sorting/gnome_sort.rs"

[[bin]]
name = "heap_sort"
path = "src/sorting/heap_sort.rs"

[[bin]]
name = "merge_sort"
path = "src/sorting/merge_sort.rs"

[[bin]]
name = "odd_even_sort"
path = "src/sorting/odd_even_sort.rs"

[dependencies]