[package]
name = "rust_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# members = ["sorting"]

# cargo run --bin bubble_sort
# cargo test --bin bubble_sort
[[bin]]
name = "bubble_sort"
path = "src/sorting/bubble_sort.rs"

[[bin]]
name = "bucket_sort"
path = "src/sorting/bucket_sort.rs"

[[bin]]
name = "cocktail_shaker_sort"
path = "src/sorting/cocktail_shaker_sort.rs"

[[bin]]
name = "insertion_sort"
path = "src/sorting/insertion_sort.rs"

[[bin]]
name = "comp_sort"
path = "src/sorting/comb_sort.rs"

[[bin]]
name = "counting_sort"
path = "src/sorting/counting_sort.rs"

[[bin]]
name = "gnome_sort"
path = "src/sorting/gnome_sort.rs"

[[bin]]
name = "heap_sort"
path = "src/sorting/heap_sort.rs"

[[bin]]
name = "merge_sort"
path = "src/sorting/merge_sort.rs"

[[bin]]
name = "odd_even_sort"
path = "src/sorting/odd_even_sort.rs"

[[bin]]
name = "quick_sort"
path = "src/sorting/quick_sort.rs"

[[bin]]
name = "radix_sort"
path = "src/sorting/radix_sort.rs"

[[bin]]
name = "selection_sort"
path = "src/sorting/selection_sort.rs"

[[bin]]
name = "shell_sort"
path = "src/sorting/shell_sort.rs"

[[bin]]
name = "stooge_sort"
path = "src/sorting/stooge_sort.rs"

[[bin]]
name = "tim_sort"
path = "src/sorting/tim_sort.rs"

[[bin]]
name = "reverse"
path = "src/string/reverse.rs"

[[bin]]
name = "burrows_wheeler_transform"
path = "src/string/burrows_wheeler_transform.rs"

[dependencies]
rand = "0.8.5"
